// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardComponent should project content into content section 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
>
  <app-card>
    <div
      class="image-wrapper"
    />
    <section
      content=""
    />
  </app-card>
</ng-component>
`;

exports[`CardComponent should project image into image wrapper 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
>
  <app-card>
    <div
      class="image-wrapper"
    >
      <picture
        image=""
      />
    </div>
  </app-card>
</ng-component>
`;
